TICKET_PLATFORM#14 - add owned draft event deletion
